--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,9 @@
 Package: dispPO
-Title: An Amazing Shiny App
+Title: Visualize PegelOnline water level data
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
-Description: What the package does (one paragraph).
+    person("Felix", "Op de Hipt", , "felixodh85@googlemail.com", role = c("aut", "cre"))
+Description: This app displays pegelonline water level data
 License: What license is it under?
 Imports: 
     config,
@@ -15,3 +12,5 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/felixodh/dispPO.git
+BugReports: https://github.com/felixodh/dispPO.git/issues
